versions/v2.8/modules/en/pages/installation-and-upgrade/other-installation-methods/air-gapped/air-gapped.adoc
= Air-Gapped Helm CLI Install
:page-languages: [en, zh]
:revdate: 2024-09-26
:page-revdate: {revdate}

This section is about using the Helm CLI to install the Rancher server in an air gapped environment. An air gapped environment could be where Rancher server will be installed offline, behind a firewall, or behind a proxy.

The installation steps differ depending on whether Rancher is installed on an RKE Kubernetes cluster, a K3s Kubernetes cluster, or a single Docker container.

For more information on each installation option, refer to xref:installation-and-upgrade/installation-and-upgrade.adoc[this page.]

Throughout the installation instructions, there will be _tabs_ for each installation option.

[NOTE]
.Important:
====

If you install Rancher following the Docker installation guide, there is no upgrade path to transition your Docker Installation to a Kubernetes Installation.
====


== Installation Outline

. xref:installation-and-upgrade/other-installation-methods/air-gapped/infrastructure-private-registry.adoc[Set up infrastructure and private registry]
. xref:installation-and-upgrade/other-installation-methods/air-gapped/publish-images.adoc[Collect and publish images to your private registry]
. xref:installation-and-upgrade/other-installation-methods/air-gapped/install-kubernetes.adoc[Set up a Kubernetes cluster (Skip this step for Docker installations)]
. xref:installation-and-upgrade/other-installation-methods/air-gapped/install-rancher-ha.adoc[Install Rancher]

== Upgrades

To upgrade Rancher with Helm CLI in an air gap environment, follow xref:installation-and-upgrade/upgrades.adoc[this procedure.]

=== xref:installation-and-upgrade/other-installation-methods/air-gapped/infrastructure-private-registry.adoc[Next: Prepare your Node(s)]
