versions/v2.9/modules/en/pages/installation-and-upgrade/other-installation-methods/air-gapped/air-gapped.adoc
= Air-Gapped Helm CLI Install
:page-languages: [en, zh]
:revdate: 2024-09-27
:page-revdate: {revdate}
:community-path: getting-started/installation-and-upgrade/other-installation-methods/air-gapped-helm-cli-install/index.adoc 
:product-path: installation-and-upgrade/other-installation-methods/air-gapped/air-gapped.adoc
ifeval::["{build-type}" != "community"]
:xref-install-upgrade: xref:installation-and-upgrade/installation-and-upgrade.adoc
:xref-air-gap-publish-images: xref:installation-and-upgrade/other-installation-methods/air-gapped/publish-images.adoc
:xref-air-gap-rancher-ha: xref:installation-and-upgrade/other-installation-methods/air-gapped/install-rancher-ha.adoc
:xref-rancher-upgrades: xref:installation-and-upgrade/upgrades.adoc
:xref-air-gap-private-reg: xref:installation-and-upgrade/other-installation-methods/air-gapped/infrastructure-private-registry.adoc
:xref-air-gap-install-k8s: xref:installation-and-upgrade/other-installation-methods/air-gapped/install-kubernetes.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:xref-install-upgrade: xref:getting-started/installation-and-upgrade/index.adoc
:xref-air-gap-publish-images: xref:getting-started/installation-and-upgrade/other-installation-methods/air-gapped-helm-cli-install/publish-images.adoc
:xref-air-gap-rancher-ha: xref:getting-started/installation-and-upgrade/other-installation-methods/air-gapped-helm-cli-install/install-rancher-ha.adoc
:xref-rancher-upgrades: xref:getting-started/installation-and-upgrade/install-upgrade-on-a-kubernetes-cluster/upgrades.adoc
:xref-air-gap-private-reg: xref:getting-started/installation-and-upgrade/other-installation-methods/air-gapped-helm-cli-install/infrastructure-private-registry.adoc
:xref-air-gap-install-k8s: xref:getting-started/installation-and-upgrade/other-installation-methods/air-gapped-helm-cli-install/install-kubernetes.adoc
endif::[]

This section is about using the Helm CLI to install the Rancher server in an air gapped environment. An air gapped environment could be where Rancher server will be installed offline, behind a firewall, or behind a proxy.

The installation steps differ depending on whether Rancher is installed on an RKE Kubernetes cluster or a K3s Kubernetes cluster.

For more information on each installation option, refer to {xref-install-upgrade}[this page.]

Throughout the installation instructions, there will be _tabs_ for each installation option.

ifeval::["{build-type}" == "community"]
[NOTE]
.Important:
====
If you install Rancher following the Docker installation guide, there is no upgrade path to transition your Docker Installation to a Kubernetes Installation.
====
endif::[]

== Installation Outline

. {xref-air-gap-private-reg}[Set up infrastructure and private registry]
. {xref-air-gap-publish-images}[Collect and publish images to your private registry]
. {xref-air-gap-install-k8s}[Set up a Kubernetes cluster]
ifeval::["{build-type}" != "community"]
. {xref-air-gap-install-k8s}[Set up a Kubernetes cluster]
endif::[]
ifeval::["{build-type}" == "community"]
. {xref-air-gap-install-k8s}[Set up a Kubernetes cluster (Skip this step for Docker installations)]
endif::[]
. {xref-air-gap-rancher-ha}[Install Rancher]

== Upgrades

To upgrade Rancher with Helm CLI in an air gap environment, follow {xref-rancher-upgrades}[this procedure.]

=== {xref-air-gap-private-reg}[Next: Prepare your Node(s)]
